<resources>
    <string name="app_name">Turf Booking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Turf Booking</string>
    <string name="nav_header_subtitle">turfbooking@gmail.com</string>
    <string name="nav_header_desc">Header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_booking">My Pending Bookings</string>
    <string name="menu_book_now">Book Now</string>
    <string name="menu_booking_pending_for_approval">Booking Pending For Approval</string>
    <string name="menu_turf_pending_for_approval">Turf Pending For Approval</string>
    <string name="menu_add_turf">Add New Turf</string>
    <string name="menu_logout">Logout</string>
</resources>
