<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_book_now"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_book_now" />

        <item
            android:id="@+id/nav_my_booking"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_my_booking" />

        <item
            android:id="@+id/nav_logout_user"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_logout"
            android:visible="true"
            app:showAsAction="never" />
    </group>
</menu>