<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pending_booking_approval"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_booking_pending_for_approval" />
        <item
            android:id="@+id/nav_add_turf"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_add_turf" />
        <item
            android:id="@+id/nav_logout_owner"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_logout"
            android:visible="true"
            app:showAsAction="never" />
    </group>
</menu>